feat: Implement Google OAuth 2.0 authentication
- Added GoogleAuthService for validating Google ID tokens and managing user login/creation.
- Created GoogleAuthRequest and GoogleAuthResponse DTOs for handling requests and responses.
- Updated User model to include Google-specific fields (googleSub, pictureUrl, emailVerified).
- Enhanced SecurityConfig to allow Google authentication endpoints.
- Created initial database migration scripts for user table and added Google OAuth fields.
- Updated pom.xml to include necessary dependencies for Google API client.
- Added unit tests for GoogleAuthService to ensure correct functionality.
- Documented project structure and guidelines in new markdown files.